--- a/REST API with Cursor/package.json
+++ b/REST API with Cursor/package.json
@@ -14,8 +14,10 @@
   "license": "ISC",
   "dependencies": {
     "bcryptjs": "^3.0.2",
+    "cors": "^2.8.5",
     "express": "^4.18.2",
     "jsonwebtoken": "^9.0.2",
+    "multer": "^2.0.0",
     "sqlite": "^5.1.1",
     "sqlite3": "^5.1.7"
   },
